--- a/css/style.css
+++ b/css/style.css
@@ -60,4 +60,9 @@ header {
   height: 3em;
   fill: #fff;
 }
+
+/* Small devices (landscape phones, 576px and up) */
+/* Medium devices (tablets, 768px and up) */
+/* Large devices (desktops, 992px and up) */
+/* Extra large devices (large desktops, 1200px and up) */
 /*# sourceMappingURL=style.css.map */
