--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,61 +10,75 @@ $radius: 0.3rem;
 *,
 *::after,
 *::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 input {
-    background-color: $color-bg-primary;
-    border: 1px solid $color-border;
-    padding: 0.31rem 0.75rem;
-    border-radius: $radius;
-    color: $color-font-primary;
+	background-color: $color-bg-primary;
+	border: 1px solid $color-border;
+	padding: 0.31rem 0.75rem;
+	border-radius: $radius;
+	color: $color-font-primary;
 }
 
 input:focus {
-    border: 1px solid $color-border-blue;
+	border: 1px solid $color-border-blue;
 }
 
 input:active {
-    border: 1px solid $color-border-blue;
+	border: 1px solid $color-border-blue;
 }
 
 ::placeholder {
-    color: #272c33;
+	color: #272c33;
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, “Segoe UI”, “Roboto”,
-        “Oxygen”, “Ubuntu”, “Cantarell”, “Fira Sans”, “Droid Sans”,
-        “Helvetica Neue”, sans-serif;
-    font-size: 16px;
-    background-color: $color-bg-primary;
-    color: $color-font-primary;
+	font-family: -apple-system, BlinkMacSystemFont, “Segoe UI”, “Roboto”, “Oxygen”, “Ubuntu”,
+		“Cantarell”, “Fira Sans”, “Droid Sans”, “Helvetica Neue”, sans-serif;
+	font-size: 16px;
+	background-color: $color-bg-primary;
+	color: $color-font-primary;
 }
 
-header {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    height: 4.25rem;
-    background-color: $color-bg-header;
-}
-
-.logo {
-    height: 3em;
-    fill: #fff;
-}
 /* Small devices (landscape phones, 576px and up) */
 @media (max-width: 767.98px) {
-    
+	header.header-main {
+		display: grid;
+		grid-template-columns: 100px 1fr 1fr;
+		grid-template-rows: 1fr 1fr;
+		min-height: 4.25rem;
+		background-color: $color-bg-header;
+
+		.logo {
+			grid-column: 1 / 2;
+			grid-row: 1 / 2;
+			height: 3em;
+			fill: #fff;
+		}
+
+		.main-nav {
+			grid-column: 2 / 3;
+			grid-row: 1 / 2;
+		}
+
+		.user-nav {
+			grid-column: 3 / 4;
+			grid-row: 1 / 2;
+		}
+	}
 }
 
 /* Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) and (max-width: 991.98px) {}
+@media (min-width: 768px) and (max-width: 991.98px) {
+}
 
 /* Large devices (desktops, 992px and up) */
-@media (min-width: 992px) and (max-width: 1199.98px) {}
+@media (min-width: 992px) and (max-width: 1199.98px) {
+}
 
 /* Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {}
+@media (min-width: 1200px) {
+}
