--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,6 +15,10 @@ $radius: 0.3rem;
 	box-sizing: border-box;
 }
 
+ul {
+	list-style: none;
+}
+
 input {
 	background-color: $color-bg-primary;
 	border: 1px solid $color-border;
@@ -35,6 +39,12 @@ input:active {
 	color: #272c33;
 }
 
+.avatar {
+	height: 2rem;
+	width: 2rem;
+	border-radius: 50%;
+}
+
 body {
 	font-family: -apple-system, BlinkMacSystemFont, “Segoe UI”, “Roboto”, “Oxygen”, “Ubuntu”,
 		“Cantarell”, “Fira Sans”, “Droid Sans”, “Helvetica Neue”, sans-serif;
@@ -47,26 +57,54 @@ body {
 @media (max-width: 767.98px) {
 	header.header-main {
 		display: grid;
-		grid-template-columns: 100px 1fr 1fr;
-		grid-template-rows: 1fr 1fr;
-		min-height: 4.25rem;
+		grid-template-columns: 1fr 1fr 1fr;
+		grid-template-rows: 5rem 1fr;
 		background-color: $color-bg-header;
 
-		.logo {
+		.mobile-bars {
 			grid-column: 1 / 2;
 			grid-row: 1 / 2;
-			height: 3em;
+			width: 1.5rem;
+			justify-self: center;
+			align-self: center;
+			fill: white;
+		}
+
+		.logo {
+			grid-column: 2 / 3;
+			grid-row: 1 / 2;
+			height: 2rem;
+			justify-self: center;
+			align-self: center;
 			fill: #fff;
+		}
+
+		form.header--form {
+			outline: 1px dashed red;
+			display: none;
 		}
 
 		.main-nav {
 			grid-column: 2 / 3;
 			grid-row: 1 / 2;
+			display: none;
 		}
 
 		.user-nav {
 			grid-column: 3 / 4;
 			grid-row: 1 / 2;
+
+			svg {
+				height: 1em;
+				fill: white;
+			}
+
+			.user-nav--item {
+				justify-content: center;
+				align-items: center;
+				// outline: 1px dashed red;
+				margin-right: 1rem;
+			}
 		}
 	}
 }
