--- a/scss/style.scss
+++ b/scss/style.scss
@@ -64,10 +64,11 @@ body {
 		.mobile-bars {
 			grid-column: 1 / 2;
 			grid-row: 1 / 2;
-			width: 1.5rem;
-			justify-self: center;
+			width: 1rem;
+			// justify-self: start;
 			align-self: center;
 			fill: white;
+			margin: 1rem;
 		}
 
 		.logo {
@@ -111,6 +112,9 @@ body {
 
 				&:first-child {
 					display: flex;
+					.caret-down {
+						display: none;
+					}
 				}
 			}
 		}
